[package]
name = "shlump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
fxhash = "0.2.1"
rand = "0.8.5"
tokio = "1.28.2"

[dependencies.uuid]
uuid = "1.4.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]